--- a/SurvivalShooter/Assembly-CSharp.csproj
+++ b/SurvivalShooter/Assembly-CSharp.csproj
@@ -52,6 +52,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Camera\CameraFollow.cs" />
+     <Compile Include="Assets\Scripts\Director\EnemyDirector.cs" />
+     <Compile Include="Assets\Scripts\Director\GameOverDirector.cs" />
+     <Compile Include="Assets\Scripts\Director\ScoreDirector.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemyAttack.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemyHealth.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemyMovement.cs" />
